iniciando a tela de grid

--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
                     </ul>
                 </nav>
             </div>
-            <img src="src/imagens/logo_chefplus_deitado.png" alt="logo" class="logo">
+            <img src="src/imagens/logoEscritaLateral.png" alt="logo" class="logo">
         </header>
         <div class="corpoPrincipal">
             <div class="consultaProdutos tela">
@@ -50,24 +50,144 @@
                             <h2 class="precoItem">R$10,00</h2>
                         </div>
                         <div class="adicionarTirarItem">
-                            <a class="tirarItem"><img src="src/imagens/Retirar.png" alt="Tirar um item"></a>
+                            <button class="tirarItem"><img src="src/imagens/Retirar.png" alt="Tirar um item"></button>
                             <p class="quantidade">00</p>
-                            <a class="adicionarItem"><img src="src/imagens/Adicionar.png" alt="Adicioar um item"></a>
+                            <button class="adicionarItem"><img src="src/imagens/Adicionar.png" alt="Adicioar um item"></button>
+                        </div>
+                    </div>
+                    <div class="itemProdutos">
+                        <div class="containerProdutos">
+                            <h1 class="nomeItem">Nome produto teste 1 item</h1>
+                            <img src="http://placekitten.com/80/80" alt="Foto do produto">
+                            <h2 class="precoItem">R$10,00</h2>
+                        </div>
+                        <div class="adicionarTirarItem">
+                            <button class="tirarItem"><img src="src/imagens/Retirar.png" alt="Tirar um item"></button>
+                            <p class="quantidade">00</p>
+                            <button class="adicionarItem"><img src="src/imagens/Adicionar.png" alt="Adicioar um item"></button>
+                        </div>
+                    </div>
+                    <div class="itemProdutos">
+                        <div class="containerProdutos">
+                            <h1 class="nomeItem">Nome produto teste 1 item</h1>
+                            <img src="http://placekitten.com/80/80" alt="Foto do produto">
+                            <h2 class="precoItem">R$10,00</h2>
+                        </div>
+                        <div class="adicionarTirarItem">
+                            <button class="tirarItem"><img src="src/imagens/Retirar.png" alt="Tirar um item"></button>
+                            <p class="quantidade">00</p>
+                            <button class="adicionarItem"><img src="src/imagens/Adicionar.png" alt="Adicioar um item"></button>
+                        </div>
+                    </div>
+                    <div class="itemProdutos">
+                        <div class="containerProdutos">
+                            <h1 class="nomeItem">Nome produto teste 1 item</h1>
+                            <img src="http://placekitten.com/80/80" alt="Foto do produto">
+                            <h2 class="precoItem">R$10,00</h2>
+                        </div>
+                        <div class="adicionarTirarItem">
+                            <button class="tirarItem"><img src="src/imagens/Retirar.png" alt="Tirar um item"></button>
+                            <p class="quantidade">00</p>
+                            <button class="adicionarItem"><img src="src/imagens/Adicionar.png" alt="Adicioar um item"></button>
+                        </div>
+                    </div>
+                    <div class="itemProdutos">
+                        <div class="containerProdutos">
+                            <h1 class="nomeItem">Nome produto teste 1 item</h1>
+                            <img src="http://placekitten.com/80/80" alt="Foto do produto">
+                            <h2 class="precoItem">R$10,00</h2>
+                        </div>
+                        <div class="adicionarTirarItem">
+                            <button class="tirarItem"><img src="src/imagens/Retirar.png" alt="Tirar um item"></button>
+                            <p class="quantidade">00</p>
+                            <button class="adicionarItem"><img src="src/imagens/Adicionar.png" alt="Adicioar um item"></button>
+                        </div>
+                    </div>
+                    <div class="itemProdutos">
+                        <div class="containerProdutos">
+                            <h1 class="nomeItem">Nome produto teste 1 item</h1>
+                            <img src="http://placekitten.com/80/80" alt="Foto do produto">
+                            <h2 class="precoItem">R$10,00</h2>
+                        </div>
+                        <div class="adicionarTirarItem">
+                            <button class="tirarItem"><img src="src/imagens/Retirar.png" alt="Tirar um item"></button>
+                            <p class="quantidade">00</p>
+                            <button class="adicionarItem"><img src="src/imagens/Adicionar.png" alt="Adicioar um item"></button>
+                        </div>
+                    </div>
+                    <div class="itemProdutos">
+                        <div class="containerProdutos">
+                            <h1 class="nomeItem">Nome produto teste 1 item</h1>
+                            <img src="http://placekitten.com/80/80" alt="Foto do produto">
+                            <h2 class="precoItem">R$10,00</h2>
+                        </div>
+                        <div class="adicionarTirarItem">
+                            <button class="tirarItem"><img src="src/imagens/Retirar.png" alt="Tirar um item"></button>
+                            <p class="quantidade">00</p>
+                            <button class="adicionarItem"><img src="src/imagens/Adicionar.png" alt="Adicioar um item"></button>
+                        </div>
+                    </div>
+                    <div class="itemProdutos">
+                        <div class="containerProdutos">
+                            <h1 class="nomeItem">Nome produto teste 1 item</h1>
+                            <img src="http://placekitten.com/80/80" alt="Foto do produto">
+                            <h2 class="precoItem">R$10,00</h2>
+                        </div>
+                        <div class="adicionarTirarItem">
+                            <button class="tirarItem"><img src="src/imagens/Retirar.png" alt="Tirar um item"></button>
+                            <p class="quantidade">00</p>
+                            <button class="adicionarItem"><img src="src/imagens/Adicionar.png" alt="Adicioar um item"></button>
+                        </div>
+                    </div>
+                    <div class="itemProdutos">
+                        <div class="containerProdutos">
+                            <h1 class="nomeItem">Nome produto teste 1 item</h1>
+                            <img src="http://placekitten.com/80/80" alt="Foto do produto">
+                            <h2 class="precoItem">R$10,00</h2>
+                        </div>
+                        <div class="adicionarTirarItem">
+                            <button class="tirarItem"><img src="src/imagens/Retirar.png" alt="Tirar um item"></button>
+                            <p class="quantidade">00</p>
+                            <button class="adicionarItem"><img src="src/imagens/Adicionar.png" alt="Adicioar um item"></button>
+                        </div>
+                    </div>
+                    <div class="itemProdutos">
+                        <div class="containerProdutos">
+                            <h1 class="nomeItem">Nome produto teste 1 item</h1>
+                            <img src="http://placekitten.com/80/80" alt="Foto do produto">
+                            <h2 class="precoItem">R$10,00</h2>
+                        </div>
+                        <div class="adicionarTirarItem">
+                            <button class="tirarItem"><img src="src/imagens/Retirar.png" alt="Tirar um item"></button>
+                            <p class="quantidade">00</p>
+                            <button class="adicionarItem"><img src="src/imagens/Adicionar.png" alt="Adicioar um item"></button>
                         </div>
                     </div>
                 </div>
                 <button class="confirmarLancamento">Confirmar pedido</button>
             </div>
             <div class="itenslancados tela">
-                <p class="numeroMesa">Mesa 00</p>
+                <h1 class="numeroMesa">Mesa 01</h1>
                 <div class="gridItens">
-                    <div class="informacoesItem">
-                        <p class="descricaoItemLancado">Descrição item - Observação do item</p>
+                    <div class="itemLancado">
+                        <h2 class="descricaoItemLancado">Descrição item - Observação do item</h2>
+                        <div class="valoresItem">
+                            <h3>Qtde X Valor = Total</h3>
+                            <button class="excluirItem"><img src="src/imagens/Cancelar.png" alt="Excluir um item lançado"></button>
+                        </div>
+                    </div> 
+                    <div class="itemLancado">
+                        <h2 class="descricaoItemLancado">Descrição item - Observação do item</h2>
                         <p>Qtde X Valor = Total</p>
-                    </div>
-                    <button class="excluirItem"><img src="" alt="Excluir um item lançado"></button>
+                        <button class="excluirItem"><img src="src/imagens/Cancelar.png" alt="Excluir um item lançado"></button>
+                    </div>  
+                    <div class="itemLancado">
+                        <h2 class="descricaoItemLancado">Descrição item - Observação do item</h2>
+                        <p>Qtde X Valor = Total</p>
+                        <button class="excluirItem"><img src="src/imagens/Cancelar.png" alt="Excluir um item lançado"></button>
+                    </div>                     
                 </div>
-                <p class="totalMesa">Total R$130,99</p>
+                <h2 class="totalMesa">Total R$130,99</h2>
             </div>
         </div>
     </main>
