finalizando a tela de itens

--- a/index.html
+++ b/index.html
@@ -163,6 +163,234 @@
                             <button class="adicionarItem"><img src="src/imagens/Adicionar.png" alt="Adicioar um item"></button>
                         </div>
                     </div>
+                    <div class="itemProdutos">
+                        <div class="containerProdutos">
+                            <h1 class="nomeItem">Nome produto teste 1 item</h1>
+                            <img src="http://placekitten.com/80/80" alt="Foto do produto">
+                            <h2 class="precoItem">R$10,00</h2>
+                        </div>
+                        <div class="adicionarTirarItem">
+                            <button class="tirarItem"><img src="src/imagens/Retirar.png" alt="Tirar um item"></button>
+                            <p class="quantidade">00</p>
+                            <button class="adicionarItem"><img src="src/imagens/Adicionar.png" alt="Adicioar um item"></button>
+                        </div>
+                    </div>
+                    <div class="itemProdutos">
+                        <div class="containerProdutos">
+                            <h1 class="nomeItem">Nome produto teste 1 item</h1>
+                            <img src="http://placekitten.com/80/80" alt="Foto do produto">
+                            <h2 class="precoItem">R$10,00</h2>
+                        </div>
+                        <div class="adicionarTirarItem">
+                            <button class="tirarItem"><img src="src/imagens/Retirar.png" alt="Tirar um item"></button>
+                            <p class="quantidade">00</p>
+                            <button class="adicionarItem"><img src="src/imagens/Adicionar.png" alt="Adicioar um item"></button>
+                        </div>
+                    </div>
+                    <div class="itemProdutos">
+                        <div class="containerProdutos">
+                            <h1 class="nomeItem">Nome produto teste 1 item</h1>
+                            <img src="http://placekitten.com/80/80" alt="Foto do produto">
+                            <h2 class="precoItem">R$10,00</h2>
+                        </div>
+                        <div class="adicionarTirarItem">
+                            <button class="tirarItem"><img src="src/imagens/Retirar.png" alt="Tirar um item"></button>
+                            <p class="quantidade">00</p>
+                            <button class="adicionarItem"><img src="src/imagens/Adicionar.png" alt="Adicioar um item"></button>
+                        </div>
+                    </div>
+                    <div class="itemProdutos">
+                        <div class="containerProdutos">
+                            <h1 class="nomeItem">Nome produto teste 1 item</h1>
+                            <img src="http://placekitten.com/80/80" alt="Foto do produto">
+                            <h2 class="precoItem">R$10,00</h2>
+                        </div>
+                        <div class="adicionarTirarItem">
+                            <button class="tirarItem"><img src="src/imagens/Retirar.png" alt="Tirar um item"></button>
+                            <p class="quantidade">00</p>
+                            <button class="adicionarItem"><img src="src/imagens/Adicionar.png" alt="Adicioar um item"></button>
+                        </div>
+                    </div>
+                    <div class="itemProdutos">
+                        <div class="containerProdutos">
+                            <h1 class="nomeItem">Nome produto teste 1 item</h1>
+                            <img src="http://placekitten.com/80/80" alt="Foto do produto">
+                            <h2 class="precoItem">R$10,00</h2>
+                        </div>
+                        <div class="adicionarTirarItem">
+                            <button class="tirarItem"><img src="src/imagens/Retirar.png" alt="Tirar um item"></button>
+                            <p class="quantidade">00</p>
+                            <button class="adicionarItem"><img src="src/imagens/Adicionar.png" alt="Adicioar um item"></button>
+                        </div>
+                    </div>
+                    <div class="itemProdutos">
+                        <div class="containerProdutos">
+                            <h1 class="nomeItem">Nome produto teste 1 item</h1>
+                            <img src="http://placekitten.com/80/80" alt="Foto do produto">
+                            <h2 class="precoItem">R$10,00</h2>
+                        </div>
+                        <div class="adicionarTirarItem">
+                            <button class="tirarItem"><img src="src/imagens/Retirar.png" alt="Tirar um item"></button>
+                            <p class="quantidade">00</p>
+                            <button class="adicionarItem"><img src="src/imagens/Adicionar.png" alt="Adicioar um item"></button>
+                        </div>
+                    </div>
+                    <div class="itemProdutos">
+                        <div class="containerProdutos">
+                            <h1 class="nomeItem">Nome produto teste 1 item</h1>
+                            <img src="http://placekitten.com/80/80" alt="Foto do produto">
+                            <h2 class="precoItem">R$10,00</h2>
+                        </div>
+                        <div class="adicionarTirarItem">
+                            <button class="tirarItem"><img src="src/imagens/Retirar.png" alt="Tirar um item"></button>
+                            <p class="quantidade">00</p>
+                            <button class="adicionarItem"><img src="src/imagens/Adicionar.png" alt="Adicioar um item"></button>
+                        </div>
+                    </div>
+                    <div class="itemProdutos">
+                        <div class="containerProdutos">
+                            <h1 class="nomeItem">Nome produto teste 1 item</h1>
+                            <img src="http://placekitten.com/80/80" alt="Foto do produto">
+                            <h2 class="precoItem">R$10,00</h2>
+                        </div>
+                        <div class="adicionarTirarItem">
+                            <button class="tirarItem"><img src="src/imagens/Retirar.png" alt="Tirar um item"></button>
+                            <p class="quantidade">00</p>
+                            <button class="adicionarItem"><img src="src/imagens/Adicionar.png" alt="Adicioar um item"></button>
+                        </div>
+                    </div>
+                    <div class="itemProdutos">
+                        <div class="containerProdutos">
+                            <h1 class="nomeItem">Nome produto teste 1 item</h1>
+                            <img src="http://placekitten.com/80/80" alt="Foto do produto">
+                            <h2 class="precoItem">R$10,00</h2>
+                        </div>
+                        <div class="adicionarTirarItem">
+                            <button class="tirarItem"><img src="src/imagens/Retirar.png" alt="Tirar um item"></button>
+                            <p class="quantidade">00</p>
+                            <button class="adicionarItem"><img src="src/imagens/Adicionar.png" alt="Adicioar um item"></button>
+                        </div>
+                    </div>
+                    <div class="itemProdutos">
+                        <div class="containerProdutos">
+                            <h1 class="nomeItem">Nome produto teste 1 item</h1>
+                            <img src="http://placekitten.com/80/80" alt="Foto do produto">
+                            <h2 class="precoItem">R$10,00</h2>
+                        </div>
+                        <div class="adicionarTirarItem">
+                            <button class="tirarItem"><img src="src/imagens/Retirar.png" alt="Tirar um item"></button>
+                            <p class="quantidade">00</p>
+                            <button class="adicionarItem"><img src="src/imagens/Adicionar.png" alt="Adicioar um item"></button>
+                        </div>
+                    </div>
+                    <div class="itemProdutos">
+                        <div class="containerProdutos">
+                            <h1 class="nomeItem">Nome produto teste 1 item</h1>
+                            <img src="http://placekitten.com/80/80" alt="Foto do produto">
+                            <h2 class="precoItem">R$10,00</h2>
+                        </div>
+                        <div class="adicionarTirarItem">
+                            <button class="tirarItem"><img src="src/imagens/Retirar.png" alt="Tirar um item"></button>
+                            <p class="quantidade">00</p>
+                            <button class="adicionarItem"><img src="src/imagens/Adicionar.png" alt="Adicioar um item"></button>
+                        </div>
+                    </div>
+                    <div class="itemProdutos">
+                        <div class="containerProdutos">
+                            <h1 class="nomeItem">Nome produto teste 1 item</h1>
+                            <img src="http://placekitten.com/80/80" alt="Foto do produto">
+                            <h2 class="precoItem">R$10,00</h2>
+                        </div>
+                        <div class="adicionarTirarItem">
+                            <button class="tirarItem"><img src="src/imagens/Retirar.png" alt="Tirar um item"></button>
+                            <p class="quantidade">00</p>
+                            <button class="adicionarItem"><img src="src/imagens/Adicionar.png" alt="Adicioar um item"></button>
+                        </div>
+                    </div>
+                    <div class="itemProdutos">
+                        <div class="containerProdutos">
+                            <h1 class="nomeItem">Nome produto teste 1 item</h1>
+                            <img src="http://placekitten.com/80/80" alt="Foto do produto">
+                            <h2 class="precoItem">R$10,00</h2>
+                        </div>
+                        <div class="adicionarTirarItem">
+                            <button class="tirarItem"><img src="src/imagens/Retirar.png" alt="Tirar um item"></button>
+                            <p class="quantidade">00</p>
+                            <button class="adicionarItem"><img src="src/imagens/Adicionar.png" alt="Adicioar um item"></button>
+                        </div>
+                    </div>
+                    <div class="itemProdutos">
+                        <div class="containerProdutos">
+                            <h1 class="nomeItem">Nome produto teste 1 item</h1>
+                            <img src="http://placekitten.com/80/80" alt="Foto do produto">
+                            <h2 class="precoItem">R$10,00</h2>
+                        </div>
+                        <div class="adicionarTirarItem">
+                            <button class="tirarItem"><img src="src/imagens/Retirar.png" alt="Tirar um item"></button>
+                            <p class="quantidade">00</p>
+                            <button class="adicionarItem"><img src="src/imagens/Adicionar.png" alt="Adicioar um item"></button>
+                        </div>
+                    </div>
+                    <div class="itemProdutos">
+                        <div class="containerProdutos">
+                            <h1 class="nomeItem">Nome produto teste 1 item</h1>
+                            <img src="http://placekitten.com/80/80" alt="Foto do produto">
+                            <h2 class="precoItem">R$10,00</h2>
+                        </div>
+                        <div class="adicionarTirarItem">
+                            <button class="tirarItem"><img src="src/imagens/Retirar.png" alt="Tirar um item"></button>
+                            <p class="quantidade">00</p>
+                            <button class="adicionarItem"><img src="src/imagens/Adicionar.png" alt="Adicioar um item"></button>
+                        </div>
+                    </div>
+                    <div class="itemProdutos">
+                        <div class="containerProdutos">
+                            <h1 class="nomeItem">Nome produto teste 1 item</h1>
+                            <img src="http://placekitten.com/80/80" alt="Foto do produto">
+                            <h2 class="precoItem">R$10,00</h2>
+                        </div>
+                        <div class="adicionarTirarItem">
+                            <button class="tirarItem"><img src="src/imagens/Retirar.png" alt="Tirar um item"></button>
+                            <p class="quantidade">00</p>
+                            <button class="adicionarItem"><img src="src/imagens/Adicionar.png" alt="Adicioar um item"></button>
+                        </div>
+                    </div>
+                    <div class="itemProdutos">
+                        <div class="containerProdutos">
+                            <h1 class="nomeItem">Nome produto teste 1 item</h1>
+                            <img src="http://placekitten.com/80/80" alt="Foto do produto">
+                            <h2 class="precoItem">R$10,00</h2>
+                        </div>
+                        <div class="adicionarTirarItem">
+                            <button class="tirarItem"><img src="src/imagens/Retirar.png" alt="Tirar um item"></button>
+                            <p class="quantidade">00</p>
+                            <button class="adicionarItem"><img src="src/imagens/Adicionar.png" alt="Adicioar um item"></button>
+                        </div>
+                    </div>
+                    <div class="itemProdutos">
+                        <div class="containerProdutos">
+                            <h1 class="nomeItem">Nome produto teste 1 item</h1>
+                            <img src="http://placekitten.com/80/80" alt="Foto do produto">
+                            <h2 class="precoItem">R$10,00</h2>
+                        </div>
+                        <div class="adicionarTirarItem">
+                            <button class="tirarItem"><img src="src/imagens/Retirar.png" alt="Tirar um item"></button>
+                            <p class="quantidade">00</p>
+                            <button class="adicionarItem"><img src="src/imagens/Adicionar.png" alt="Adicioar um item"></button>
+                        </div>
+                    </div>
+                    <div class="itemProdutos">
+                        <div class="containerProdutos">
+                            <h1 class="nomeItem">Nome produto teste 1 item</h1>
+                            <img src="http://placekitten.com/80/80" alt="Foto do produto">
+                            <h2 class="precoItem">R$10,00</h2>
+                        </div>
+                        <div class="adicionarTirarItem">
+                            <button class="tirarItem"><img src="src/imagens/Retirar.png" alt="Tirar um item"></button>
+                            <p class="quantidade">00</p>
+                            <button class="adicionarItem"><img src="src/imagens/Adicionar.png" alt="Adicioar um item"></button>
+                        </div>
+                    </div>
                 </div>
                 <button class="confirmarLancamento">Confirmar pedido</button>
             </div>
@@ -172,19 +400,23 @@
                     <div class="itemLancado">
                         <h2 class="descricaoItemLancado">Descrição item - Observação do item</h2>
                         <div class="valoresItem">
-                            <h3>Qtde X Valor = Total</h3>
+                            <h3 class="valorItem">Qtde X Valor = Total</h3>
                             <button class="excluirItem"><img src="src/imagens/Cancelar.png" alt="Excluir um item lançado"></button>
                         </div>
                     </div> 
                     <div class="itemLancado">
                         <h2 class="descricaoItemLancado">Descrição item - Observação do item</h2>
-                        <p>Qtde X Valor = Total</p>
-                        <button class="excluirItem"><img src="src/imagens/Cancelar.png" alt="Excluir um item lançado"></button>
+                        <div class="valoresItem">
+                            <h3 class="valorItem">Qtde X Valor = Total</h3>
+                            <button class="excluirItem"><img src="src/imagens/Cancelar.png" alt="Excluir um item lançado"></button>
+                        </div>
                     </div>  
                     <div class="itemLancado">
                         <h2 class="descricaoItemLancado">Descrição item - Observação do item</h2>
-                        <p>Qtde X Valor = Total</p>
-                        <button class="excluirItem"><img src="src/imagens/Cancelar.png" alt="Excluir um item lançado"></button>
+                        <div class="valoresItem">
+                            <h3 class="valorItem">Qtde X Valor = Total</h3>
+                            <button class="excluirItem"><img src="src/imagens/Cancelar.png" alt="Excluir um item lançado"></button>
+                        </div>
                     </div>                     
                 </div>
                 <h2 class="totalMesa">Total R$130,99</h2>
