finalizacao da tela

--- a/lancamentoItens.html
+++ b/lancamentoItens.html
@@ -8,6 +8,9 @@
     <link rel="stylesheet" href="src/css/reset.css">
     <link rel="stylesheet" href="src/css/style.css">
     <link rel="stylesheet" href="src/css/menu.css">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@300;400;700;900&display=swap" rel="stylesheet">
 </head>
 
 <body>
@@ -170,26 +173,40 @@
                 <h1 class="numeroMesa">Mesa 01</h1>
                 <div class="gridItens">
                     <div class="itemLancado">
-                        <h2 class="descricaoItemLancado">Descrição item - Observação do item</h2>
+                        <p class="descricaoItemLancado">Descrição item - Observação do item</p>
                         <div class="valoresItem">
-                            <h3 class="valorItem">Qtde X Valor = Total</h3>
+                            <p class="valorItem">Qtde X Valor = Total</p>
                             <button class="excluirItem"><img src="src/imagens/Cancelar.png" alt="Excluir um item lançado"></button>
                         </div>
                     </div> 
                     <div class="itemLancado">
-                        <h2 class="descricaoItemLancado">Descrição item - Observação do item</h2>
+                        <p class="descricaoItemLancado">Descrição item - Observação do item</p>
                         <div class="valoresItem">
-                            <h3 class="valorItem">Qtde X Valor = Total</h3>
+                            <p class="valorItem">Qtde X Valor = Total</p>
                             <button class="excluirItem"><img src="src/imagens/Cancelar.png" alt="Excluir um item lançado"></button>
                         </div>
                     </div>  
                     <div class="itemLancado">
-                        <h2 class="descricaoItemLancado">Descrição item - Observação do item</h2>
+                        <p class="descricaoItemLancado">Descrição item - Observação do item</p>
                         <div class="valoresItem">
-                            <h3 class="valorItem">Qtde X Valor = Total</h3>
+                            <p class="valorItem">Qtde X Valor = Total</p>
                             <button class="excluirItem"><img src="src/imagens/Cancelar.png" alt="Excluir um item lançado"></button>
                         </div>
-                    </div>                     
+                    </div>
+                    <div class="itemLancado">
+                        <p class="descricaoItemLancado">Descrição item - Observação do item</p>
+                        <div class="valoresItem">
+                            <p class="valorItem">Qtde X Valor = Total</p>
+                            <button class="excluirItem"><img src="src/imagens/Cancelar.png" alt="Excluir um item lançado"></button>
+                        </div>
+                    </div> 
+                    <div class="itemLancado">
+                        <p class="descricaoItemLancado">Descrição item - Observação do item</p>
+                        <div class="valoresItem">
+                            <p class="valorItem">Qtde X Valor = Total</p>
+                            <button class="excluirItem"><img src="src/imagens/Cancelar.png" alt="Excluir um item lançado"></button>
+                        </div>
+                    </div> 
                 </div>
                 <h2 class="totalMesa">Total R$130,99</h2>
             </div>
