acrescentando pagina de menus

--- a/lancamentoItens.html
+++ b/lancamentoItens.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>ChefPlus</title>
     <link rel="stylesheet" href="src/css/reset.css">
-    <link rel="stylesheet" href="src/css/style.css">
+    <link rel="stylesheet" href="src/css/estiloLancamentoItens.css">
     <link rel="stylesheet" href="src/css/menu.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -17,7 +17,7 @@
     <main>
         <header class="header">
             <div class="container">
-                <a href="#" class="voltar"><img src="src/imagens/Seta.png" alt="Voltar para a tela anterior."></a>
+                <a href="paginaInicial.html" class="voltar"><img src="src/imagens/Seta.png" alt="Voltar para a tela anterior."></a>
                 <nav>
                     <input type="checkbox" name="menu-hamburguer" id="menu-hamburguer">
                     <label for="menu-hamburguer">
@@ -26,16 +26,11 @@
                         </div>
                     </label>
                     <ul class="itensMenu">
-                        <li><a href="#" class="fecharMesa"><img src="src/imagens/FecharMesa.png" alt="Fechar Mesa."></a>
-                        </li>
-                        <li><a href="#" class="transferenciaMesa"><img src="src/imagens/Transferencia.png"
-                                    alt="Transferir consumo para outra mesa."></a></li>
-                        <li><a href="#" class="agrupamentoMesa"><img src="src/imagens/Agrupamento.png"
-                                    alt="Agrupar mesas."></a></li>
-                        <li><a href="#" class="imprimirConsumo"><img src="src/imagens/impressora.png"
-                                    alt="Imprimir consumo da mesa."></a></li>
-                        <li><a href="#" class="logout"><img src="src/imagens/DeslogarSistema.png"
-                                    alt="Deslogar do sistema."></a></li>
+                        <li><a href="#" class="fecharMesa"><img src="src/imagens/FecharMesa.png" alt="Fechar Mesa."></a></li>
+                        <li><a href="#" class="transferenciaMesa"><img src="src/imagens/Transferencia.png" alt="Transferir consumo para outra mesa."></a></li>
+                        <li><a href="#" class="agrupamentoMesa"><img src="src/imagens/Agrupamento.png" alt="Agrupar mesas."></a></li>
+                        <li><a href="#" class="imprimirConsumo"><img src="src/imagens/impressora.png" alt="Imprimir consumo da mesa."></a></li>
+                        <li><a href="#" class="logout"><img src="src/imagens/DeslogarSistema.png" alt="Deslogar do sistema."></a></li>
                     </ul>
                 </nav>
             </div>
@@ -43,8 +38,7 @@
         </header>
         <div class="corpoPrincipal">
             <div class="consultaProdutos tela">
-                <input type="text" class="pesquisaProduto" id="" alt="Pesquisa de produto"
-                    placeholder="Pesquisar um produto">
+                <input type="text" class="pesquisaProduto" id="" alt="Pesquisa de produto" placeholder="Pesquisar um produto">
                 <div class="produtos">
                     <div class="itemProdutos">
                         <div class="containerProdutos">
