--- a/paginaInicial.html
+++ b/paginaInicial.html
@@ -39,7 +39,7 @@
             </a>
             <a href="lancamentoItens.html" class="botoesLateral">
                 <img src="/src/imagens/Mesas.png">
-                <h3 class="descricaoMenu">Mesas</h3>
+                <h3 class="descricaoMenu">Módulo Mesas</h3>
             </a>
             <a href="" class="botoesLateral">
                 <img src="src/imagens/Relatorios.png">
