Começando a mexer com a tela de fechamento

--- a/lancamentoItens.html
+++ b/lancamentoItens.html
@@ -8,6 +8,7 @@
     <link rel="stylesheet" href="src/css/reset.css">
     <link rel="stylesheet" href="src/css/estiloLancamentoItens.css">
     <link rel="stylesheet" href="src/css/menu.css">
+    <link rel="stylesheet" href="src/css/scroll.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@300;400;700;900&display=swap" rel="stylesheet">
@@ -26,7 +27,7 @@
                         </div>
                     </label>
                     <ul class="itensMenu">
-                        <li><a href="#" class="fecharMesa"><img src="src/imagens/FecharMesa.png" alt="Fechar Mesa."></a></li>
+                        <li><a href="fechamenoMesa.html" class="fecharMesa"><img src="src/imagens/FecharMesa.png" alt="Fechar Mesa."></a></li>
                         <li><a href="#" class="transferenciaMesa"><img src="src/imagens/Transferencia.png" alt="Transferir consumo para outra mesa."></a></li>
                         <li><a href="#" class="agrupamentoMesa"><img src="src/imagens/Agrupamento.png" alt="Agrupar mesas."></a></li>
                         <li><a href="#" class="imprimirConsumo"><img src="src/imagens/impressora.png" alt="Imprimir consumo da mesa."></a></li>
@@ -39,7 +40,7 @@
         <div class="corpoPrincipal">
             <div class="consultaProdutos tela">
                 <input type="text" class="pesquisaProduto" id="" alt="Pesquisa de produto" placeholder="Pesquisar um produto">
-                <div class="produtos">
+                <div class="produtos scroll">
                     <div class="itemProdutos">
                         <div class="containerProdutos">
                             <h1 class="nomeItem">Nome produto teste 1 item</h1>
@@ -57,7 +58,7 @@
             </div>
             <div class="itenslancados tela">
                 <h1 class="numeroMesa">Mesa 01</h1>
-                <div class="gridItens">
+                <div class="gridItens scroll">
                     <div class="itemLancado">
                         <p class="descricaoItemLancado">Descrição item - Observação do item</p>
                         <div class="valoresItem">
