--- a/paginaInicial.html
+++ b/paginaInicial.html
@@ -14,26 +14,27 @@
 </head>
 
 <body>
+    <header class="header">
+        <div class="container">
+            <a href="#" class="voltar"><img src="src/imagens/Seta.png" alt="Voltar para a tela anterior."></a>
+            <nav>
+                <input type="checkbox" name="menu-hamburguer" id="menu-hamburguer">
+                <label for="menu-hamburguer">
+                    <div class="menu">
+                        <span class="hamburguer"></span>
+                    </div>
+                </label>
+                <ul class="itensMenu">
+                    <li><a href="#" class="logout"><img src="src/imagens/DeslogarSistema.png"
+                                alt="Deslogar do sistema."></a></li>
+                </ul>
+            </nav>
+        </div>
+        <img src="src/imagens/logoEscritaLateral.png" alt="logo" class="logo">
+    </header>
     <main>
-        <header class="header">
-            <div class="container">
-                <a href="#" class="voltar"><img src="src/imagens/Seta.png" alt="Voltar para a tela anterior."></a>
-                <nav>
-                    <input type="checkbox" name="menu-hamburguer" id="menu-hamburguer">
-                    <label for="menu-hamburguer">
-                        <div class="menu">
-                            <span class="hamburguer"></span>
-                        </div>
-                    </label>
-                    <ul class="itensMenu">
-                        <li><a href="#" class="logout"><img src="src/imagens/DeslogarSistema.png" alt="Deslogar do sistema."></a></li>
-                    </ul>
-                </nav>
-            </div>
-            <img src="src/imagens/logoEscritaLateral.png" alt="logo" class="logo">
-        </header>
         <div class="corpoPrincipal">
-            <a href="#" class="botoesLateral">
+            <a href="" class="botoesLateral">
                 <img src="src/imagens/Administrador.png">
                 <h3 class="descricaoMenu">Administração</h3>
             </a>
